--- a/index.html
+++ b/index.html
@@ -15,18 +15,25 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus reiciendis quas ab totam est cumque alias officia labore aliquam commodi.
     </p>
-
-
-</body>
-</html>
-
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_me9856FSrE?si=4VQjRYs1MoBe7Pl6" title="YouTube video<iframe width="560" height="315" src="https://www.youtube.com/embed/wWblPXLnv6k?si=GNezQMAx2D1Qt63y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/NLXiGXbxl6Q?si=vswyogyoep-udGIy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 <style>
 
-p{}
+p{
+    background-color:brown;
+    text-align: center;
+    padding: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 
 
+nav{
+    background-color:rgb(10, 213, 101) ;
+    text-align: center;
+    padding: 2%;
+}
 
 </style>
