--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_me9856FSrE?si=4VQjRYs1MoBe7Pl6" title="YouTube video<iframe width="560" height="315" src="https://www.youtube.com/embed/wWblPXLnv6k?si=GNezQMAx2D1Qt63y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NLXiGXbxl6Q?si=vswyogyoep-udGIy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<nav>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+</nav>
+
+<div><iframe src="" frameborder="0"></iframe></div>
+<div><iframe src="" frameborder="0"></iframe></div>
+<div><iframe src="" frameborder="0"></iframe></div>
+<div><iframe src="" frameborder="0"></iframe></div>
+
+
+<ul>
+    <li class="item1"></li>
+    <li class="item2"></li>
+    <li class="item3"></li>
+    <li class="item4"></li>
+    <li class="item5"></li>
+    <li class="item6"></li>
+</ul>
+
 <body>
 <html>  
 
