--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+      <p>
+        Milano (IPA: /miˈlaːno/ ascoltaⓘ; Milan[7] in dialetto milanese, [miˈlɑ̃ː][8][9] o [miˈlãː][10]) è un comune italiano di 1 370 996 abitanti,[4] capoluogo della regione Lombardia e dell'omonima città metropolitana, centro di una delle più popolose aree metropolitane d'Europa; è inoltre il secondo comune più popoloso d'Italia (dopo Roma).
+
+        Il mito vuole che sia stata fondata intorno al 590 a.C. da una tribù celtica facente parte del gruppo degli Insubri e appartenente alla cultura di Golasecca. La città fu conquistata dagli antichi Romani nel 222 a.C.; con il passare dei secoli, Mediolanum accrebbe la sua importanza sino a divenire capitale dell'Impero romano d'Occidente; nel 313 d.C. fu promulgato l'editto di Milano, che concesse a tutti i cittadini, quindi anche ai cristiani, la libertà di culto.
+      </p>
     <div>
-        <img src="zucca.jpg" alt="">
+        <img src=3c6e7638-ade9-4dd3-9e59-8ff4c67b40af_alta-libre-aspect-ratio_default_0.jpg" alt="">
     </div>
 </body>
 </html>
